services/src/main/resources/palette-kube-deloyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-palette
  labels:
    app.kubernetes.io/instance: palette
    app.kubernetes.io/name: data-palette
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: palette
      app.kubernetes.io/name: data-palette
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: palette
        app.kubernetes.io/name: data-palette
    spec:
      hostname: data-palette
      containers:
        - name: data-palette
          image: palette:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9001
              protocol: TCP
          resources:
            requests:
              cpu: 0.25
              memory: 2G
            limits:
              cpu: 0.25
              memory: 2G
