services/src/main/resources/palette-kube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: data-palette
spec:
  type: ClusterIP
  ports:
    - port: 9001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: palette
    app.kubernetes.io/name: data-palette
